--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -31,6 +31,13 @@ In the 2nd line, the function, print\_str, is a predefined function which takes 
 
 After compilation and execution, you should be able to see the string printed on the screen at the upper left corner. The details of the compilation and execution is listed in the following section.
 
+\section {Compiling and Running}
+
+\section {More Complex Examples}
+
+\section {Special Constructs}
+
+\section {Predefined Functions}
 
 \end{document}
 
