--- a/doc/manual/manual.tex
+++ b/doc/manual/manual.tex
@@ -111,10 +111,10 @@ The following table summarizes the precedence and associativity of all the opera
     \begin{tabular}{| p{4cm} | p{4cm} |}		\hline
     Operators 		& Associativity \\ 		\hline \hline
     () [] . 			& left to right \\ 		\hline
-    *  /  \% 		& left to right \\ 		\hline
-    +  -  |			& left to right \\ 		\hline
-    <  <=  >  >=		& left to right \\ 		\hline
-    ==  !=			& left to right \\ 		\hline
+    *, /, \% 		& left to right \\ 		\hline
+    +, -, \textbar	& left to right \\ 		\hline
+    \textless,  \textless=,  \textgreater,  \textgreater=	& left to right \\ 		\hline
+    ==,  !=			& left to right \\ 		\hline
     // @				& left to right \\ 		\hline
     
     \end{tabular}
