--- a/doc/manual/manual.tex
+++ b/doc/manual/manual.tex
@@ -34,7 +34,7 @@ The following identifiers is reserved as keywords, so you are not supposed to us
 		return	& group	& int 	\\
 		float	& void	& false	\\ 
 		true		& draw	& print\_str		\\
-		load		& sleep	&				\\
+		load		& sleep	& null			\\
     \end{tabular}
 \end{center}
 
